<resources>
    <string name="app_name">Ellandria</string>
    <string name="Ellandria_headline">Ellandria</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="record">Record</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="start">Recording Started</string>
    <string name="welcome_to_ellandria">Welcome to Ellandria</string>
    <string name="todo">TODO</string>
    <string name="grosso">Grosso</string>
    <string name="fino">Fino</string>
    <string name="player">Player</string>
    <string name="ship_s_log">Ship\'s Log</string>
    <string name="home">Home</string>
    <string name="moons_2">Moons: 2</string>
    <string name="rotation_period_16_hours">Rotation Period: 16 hours</string>
    <string name="orbital_period_29_years">Orbital Period: 29 years</string>
    <string name="climate_humid_and_periods_of_rainfalls">Climate: Humid with Rainfalls</string>
    <string name="atmosphere_dense">Atmosphere: Dense</string>
    <string name="select_audio_to_record">Select audio to record</string>
    <string name="please_select_the_recorded_audio">Please select the recorded audio</string>
    <string name="upload">Upload</string>
</resources>